Commit al master en la version reciente

--- a/articulo.html
+++ b/articulo.html
@@ -4,8 +4,17 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <p>
-            Archivo de prueba para curso de Platzi
-        </p>
+        <div id="container">
+            <div id="post">
+                <h1>
+                    Este es el titulo de container
+                </h1>
+                <p>
+                    Este es el parrafo de container, 
+                    donde se podra encontrar toda la
+                    informacion de container.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
