--- a/articulo.html
+++ b/articulo.html
@@ -14,6 +14,10 @@
                     donde se podra encontrar toda la
                     informacion de container.
                 </p>
+                <p>
+                    El blog de prueba para el curso
+                    de platzi en Git y Github
+                </p>
             </div>
         </div>
     </body>
