--- a/articulo.html
+++ b/articulo.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Cabecera Hyperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog de confianza cabecera
                 </span>
             </div>
             <div id="post">
