Modificacion de cabecera y color del texto y parrafo add

--- a/articulo.html
+++ b/articulo.html
@@ -24,6 +24,7 @@
                     El blog de prueba para el curso
                     de platzi en Git y Github
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
