Cambio de titulo desde Github
Cambio de prueba

--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <h1>Archivo de prueba 1</h1>
+        <h1>Bienvenido a Hyperblog</h1>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
