--- a/articulo.html
+++ b/articulo.html
@@ -17,9 +17,9 @@
                     Este es el titulo de container
                 </h1>
                 <p>
-                    Este es el parrafo de container, 
+                    Este es el párrafo de container, 
                     donde se podra encontrar toda la
-                    informacion de container.
+                    información de container.
                 </p>
                 <p>
                     El blog de prueba para el curso
