--- a/articulo.html
+++ b/articulo.html
@@ -17,7 +17,7 @@
                     Este es el titulo de container
                 </h1>
                 <p>
-                    Este es el párrafo de container, 
+                    Este es el p&aacute;rrafo de container, 
                     donde se podra encontrar toda la
                     información de container.
                 </p>
