--- a/articulo.html
+++ b/articulo.html
@@ -21,6 +21,7 @@
                     donde se podra encontrar toda la
                     información de container.
                 </p>
+                <p><img src="imagenes/leon.jpg" width="100%"/></p>
                 <p>
                     El blog de prueba para el curso
                     de platzi en Git y Github
